--- a/index.css
+++ b/index.css
@@ -4,7 +4,7 @@
 }
   
 body{
-  background: white;
+  background;
   padding: 0;
   margin: 0;
 }
@@ -15,20 +15,20 @@ header{
   .navbar {
     width: 1000px;
     margin: 30px auto;
-    background-color:#ffff;
+    background-color: white;
   }
   
   .navbar ul{
     list-style: none;
     text-align: center;
-    background-color:#ffff;
+    background-color: white;
   }
 
   .menu > li{
     position: relative;
     text-align: center;
     display: inline-block;
-    background-color: #fff;
+    background-color:white;
   }
   
   .menu > li > button{
@@ -48,9 +48,9 @@ header{
     position: absolute;
     background: #333333;
     width: 120%;
-    visibility: hidden;
+    visibility: hidden; 
     opacity: 0;
-    transition: opacity 1.5s;
+    transition: 1.5s;
   }
 
   .submenu li button{
@@ -59,6 +59,7 @@ header{
     color: #CE7D35;
     font-family: 'Open sans, sans-serif';
     text-decoration: none;
+    transition: .3s;
   }
   .menu li:hover .submenu{
     visibility: visible;
@@ -83,9 +84,10 @@ header{
   }
 
   .student{
-    width: 250px;
+    width: 355px;
     height: auto;
-    margin: 75px auto;
+    display:block;
+    margin:auto;
   }
   
   .text1{
@@ -109,6 +111,279 @@ header{
     display:block;
     margin:auto;
    }
+  
+  
+
+   .expect{
+    text-align: center;
+    font-family:'Open Sans Condensed';
+    font-size: 30px;
+    margin: 50px auto;
+
+   }
+   .p1{
+    text-align: center;
+    font-family:'Open Sans';
+    font-size: 20px;
+    margin: 50px auto;
+   }
+
+   .p2{
+
+    text-align: center;
+    font-family:'Open Sans';
+    font-size: 20px;
+    margin: 50px auto;
+   }
+
+   .p3{
+
+    text-align: center;
+    font-family:'Open Sans';
+    font-size: 20px;
+    margin: 50px auto;
+   }
+
+   .p4{
+
+    text-align: center;
+    font-family:'Open Sans';
+    font-size: 20px;
+    margin: 50px auto;
+   }
+   
+   .brasil{
+    text-align: center;
+    font-family:'Open Sans Condensed';
+    font-size: 30px;
+    margin: 50px auto;
+
+   }
+
+   .most{
+    text-align: center;
+    font-family:'Open Sans';
+    font-size: 20px;
+    margin: 50px auto;
+
+   }
+  
+   .madrid{
+    text-align: center;
+    font-family:'Open Sans Condensed';
+    font-size: 30px;
+    margin: 50px auto;
+
+   }
+
+   .lighted{
+    text-align: center;
+    font-family:'Open Sans';
+    font-size: 20px;
+    margin: 50px auto;
+
+   }
+
+   .madrid{
+    text-align: center;
+    font-family:'Open Sans Condensed';
+    font-size: 30px;
+    margin: 50px auto;
+
+   }
+
+   .lighted{
+    text-align: center;
+    font-family:'Open Sans';
+    font-size: 20px;
+    margin: 50px auto;
+
+   }
+
+   .santorini{
+    text-align: center;
+    font-family:'Open Sans Condensed';
+    font-size: 30px;
+    margin: 50px auto;
+
+   }
+
+   .fun{
+    text-align: center;
+    font-family:'Open Sans';
+    font-size: 20px;
+    margin: 50px auto;
+
+   }
 
 
- 
+   .haveyou{
+    text-align: center;
+    font-family:'Open Sans Condensed';
+    font-size: 30px;
+    margin: 30px auto;
+
+   }
+
+   .email{
+    text-align: center;
+    font-family:'Open Sans';
+    font-size: 20px;
+    margin: 50px auto;
+   }
+
+   .meeting{
+    text-align: center;
+    font-family:'Open Sans';
+    font-size: 20px;
+    margin: 50px auto;
+   }
+
+   .contract{
+    text-align: center;
+    font-family:'Open Sans';
+    font-size: 20px;
+    margin: 50px auto;
+   }
+
+   .checkin{
+    text-align: center;
+    font-family:'Open Sans';
+    font-size: 20px;
+    margin: 50px auto;
+   }
+
+   .dontforget{
+    text-align: center;
+    font-family:'Open Sans Condensed';
+    font-size: 20px;
+    margin: 50px auto;
+   }
+    
+   .me{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+   }
+   
+   .cco{
+   display: flex;
+   width: 80%;
+
+   }
+
+   .husky{
+
+    display: flex;
+    width: 80%;
+
+   }
+
+   .discover{
+     width: 200px;
+   }
+
+
+     .contact{
+       display: block;
+       width: 900px;
+       height: 500px;
+       position: relative;
+       margin: 100px auto;
+       background-position: center;
+       box-sizing: border-box;
+       border: 2px solid #000;
+       cursor: pointer; 
+     }
+
+     .contact.active{
+       width: 800px;
+       min-height: 400px;
+
+     }
+
+     .contact.active :hover{
+
+      background: #fff;
+      color:#000;
+       
+    }
+
+     .contact:hover{
+
+      background:#f4d5a8;
+      color: #fff;
+  
+     }
+
+
+    
+   .contactus{
+    
+     margin: 100;
+     padding: 0;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     max-width: 120vh;
+     min-height: 20vh;
+     font-family: sans-serif;
+     font-size: 40px;
+
+   }
+
+
+
+   .contactus h5 {
+
+    margin:0;
+    padding: 20px;
+    width: 100%;
+    box-sizing: border-box;
+
+   }
+
+   .contactus h5 span{
+
+    display: inline-block;
+
+   }
+
+   .contact.active h5 span{
+
+    transform: rotate(45deg);
+    float: right;
+
+   }
+
+.form{
+
+  padding: 0;
+  align-items: center;
+  font-family: sans-serif;
+  display:block;
+  margin:auto;
+
+}
+
+form .row{
+
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+form .row .col-2{
+ width: calc(50% - 10px);
+ box-sizing: border-box;
+ margin-bottom: 20px;
+  
+}
+
+form .row .col-1{
+
+width: calc(50% - 10px);
+ box-sizing: border-box;
+ margin-bottom: 20px;
+}
