--- a/index.css
+++ b/index.css
@@ -4,9 +4,42 @@
 }
   
 body{
-  background;
   padding: 0;
   margin: 0;
+  animation: bgcolor infinite 10s;
+  /* justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  font-family: sans-serif; */
+
+}
+
+@keyframes bgcolor{
+  0%
+  {
+    background: #f39c12;
+  }
+  20% 
+  { 
+    background: #f3a683;
+  }
+  40%
+  {
+    background: #e66767;
+  }
+  60%
+  {
+    background: #fff200;
+  }
+  80%
+  {
+    background: #f0932b;
+  }
+  100%
+  { 
+    background: #e58e26 ;
+  }
+
 }
 
 header{
@@ -15,13 +48,13 @@ header{
   .navbar {
     width: 1000px;
     margin: 30px auto;
-    background-color: white;
+    background-color:none;
   }
   
   .navbar ul{
     list-style: none;
     text-align: center;
-    background-color: white;
+    background-color: none;
   }
 
   .menu > li{
@@ -34,7 +67,7 @@ header{
   .menu > li > button{
     display: block;
     padding: 15px 20px;
-    color: black;
+    color:none;
     font-family: 'Open Sans';
     text-decoration: none;
   }
@@ -46,7 +79,7 @@ header{
   
   .submenu{
     position: absolute;
-    background: #333333;
+    background:none;
     width: 120%;
     visibility: hidden; 
     opacity: 0;
@@ -300,6 +333,8 @@ header{
     margin-left: 80px;
    }
     
+   /*About Us*/
+
    .me{
 
     float: left;
@@ -366,106 +401,74 @@ header{
     
    } */
 
-
-     .contact{
-       display: block;
-       width: 900px;
-       height: 500px;
-       position: relative;
-       margin: 100px auto;
-       background-position: center;
-       box-sizing: border-box;
-       border: 2px solid #000;
-       cursor: pointer; 
-     }
-
-     .contact.active{
-       width: 800px;
-       min-height: 400px;
-
-     }
-
-     .contact.active :hover{
-
-      background: #fff;
-      color:#000;
-       
-    }
-
-     .contact:hover{
-
-      background:#f4d5a8;
-      color: #fff;
-  
-     }
+  /*Contact Us*/
 
 
-    
-   .contactus{
-    
-     margin: 100;
-     padding: 0;
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     max-width: 120vh;
-     min-height: 20vh;
-     font-family: sans-serif;
-     font-size: 40px;
-
-   }
-
-
-
-   .contactus h5 {
-
-    margin:0;
-    padding: 20px;
-    width: 100%;
-    box-sizing: border-box;
-
-   }
-
-   .contactus h5 span{
-
-    display: inline-block;
-
-   }
-
-   .contact.active h5 span{
-
-    transform: rotate(45deg);
-    float: right;
-
-   }
-
-.form{
-
+*{
+  margin: 0;
   padding: 0;
-  align-items: center;
+  box-sizing: border-box;
+  outline: none;
   font-family: sans-serif;
-  display:block;
-  margin:auto;
-
 }
 
-form .row{
-
+.wrapper{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  max-width: 350px;
   width: 100%;
-  display: flex;
-  flex-wrap: wrap;
+  background: #f4d5a8;
+  padding: 25px;
+  border-radius: 5px;
+  box-shadow: 4px 4px 2px #f4d5a8(254,236,164,1); 
 }
 
-form .row .col-2{
- width: calc(50% - 10px);
- box-sizing: border-box;
- margin-bottom: 20px;
-  
+.wrapper h2{
+  text-align: center;
+  margin-bottom: 20px;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  color: #332902;
 }
 
-form .row .col-1{
+.wrapper .input_field{
+  margin-bottom: 10px;
+}
 
-width: calc(50% - 10px);
- box-sizing: border-box;
- margin-bottom: 20px;
+.wrapper .input_field input[type="text"],
+.wrapper textarea{
+  border: 1px solid #e0e0e0;
+  width: 100%;
+  padding: 10px;
+}
+
+.wrapper textarea{
+  resize: none;
+  height: 80px;
+}
+
+.wrapper .btn input[type="submit"]{
+  border: 0px;
+  margin-top: 15px;
+  padding: 10px;
+  text-align: center;
+  width: 100%;
+  background: black;
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  font-weight: bold;
+  border-radius: 25px;
+  cursor: pointer;
+}
+
+#error_message{
+  margin-bottom: 20px;
+  background: #f7787d;
+  padding: 0px;
+  text-align: center;
+  font-size: 14px;
+  transition: all 0.5s ease;
 }
